2004-06-26  Daniel Macks  <dmacks@netspace.org>

	* Base.pm: param_boolean now returns undef if field is not present.
	* Engine.pm, PkgVersion.pm: update to use new tristate param_boolean.

2004-06-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Stop ccache from making root-owned files in
	$HOME/.ccache/ of user running fink.

2004-06-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Slurp .deb contents first instead of checking
	line-by-line. Verify presence and execute-flag on daemonicfile
	executable and dependency on daemonic.

2004-06-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Check for hardcoded /sw in DaemonicFile.

2004-06-23  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Very strict check of Shlibs formatting.

2004-06-23  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: If have %type_*[*] in Package, error if not InfoN>=2.

2004-06-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Validation.pm: One more tweak to BuildDependsOnly:
	we now write out the value "Undefined" to the .deb if it wasn't
	defined in the .info, and test for that value when deciding whether
	or not to warn.

2004-06-22  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use new accessors for CompileScript and InstallScript.
	* PkgVersion.pm: Added parameter to run_script to control whether
	%-expansion should be performed. Moved parsing of CompileScript
	and InstallScript (including defaults) into new get_compilescript
	and get_installscript accessors. Added support for %default_script
	in these fields.

2004-06-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Check that BuildDependsOnly is a boolean field.
	* Validation.pm: Fix the validation check for boolean fields.

2004-06-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When writing the contents of the BuildDependsOnly
	field into the .deb file, only write the contents if the field
	exists.